; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-cli.c_clusterManagerStartTransaction.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-cli.c_clusterManagerStartTransaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"MULTI\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @clusterManagerStartTransaction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clusterManagerStartTransaction(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @CLUSTER_MANAGER_COMMAND(i32* %5, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @clusterManagerCheckRedisReply(i32* %7, i32* %8, i32* null)
  store i32 %9, i32* %4, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @freeReplyObject(i32* %13)
  br label %15

15:                                               ; preds = %12, %1
  %16 = load i32, i32* %4, align 4
  ret i32 %16
}

declare dso_local i32* @CLUSTER_MANAGER_COMMAND(i32*, i8*) #1

declare dso_local i32 @clusterManagerCheckRedisReply(i32*, i32*, i32*) #1

declare dso_local i32 @freeReplyObject(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
